fixed small layout issue related to title reflection and footer in 404 page

--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -145,7 +145,7 @@ nav li:first-child{
 .errorPage{
 	margin-top: 40px;
 	font-size:	5em;
-	-webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.6, transparent), to(rgba(0,0,0,0.5)));
+	-webkit-box-reflect: below -0.3em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.6, transparent), to(rgba(0,0,0,0.5)));
 }
 
 
